--- a/C/Makefile
+++ b/C/Makefile
@@ -1,8 +1,12 @@
-samples: 1.1.o 1.2.o
+samples: 1.1.o 1.2.o 1.3.o 1.4.o
 
 1.1.o : 1.1.c
 	gcc 1.1.c -o 1.1.o
 1.2.o : 1.2.c
 	gcc 1.2.c -o 1.2.o
+1.3.o : 1.3.c
+	gcc 1.3.c -o 1.3.o
+1.4.o : 1.4.c
+	gcc 1.4.c -o 1.4.o
 clean :
 	rm 1.1.o 1.2.o
