--- a/C/Makefile
+++ b/C/Makefile
@@ -1,4 +1,4 @@
-samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o
+samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o
 
 1.1.o : 1.1.c
 	gcc 1.1.c -o 1.1.o
@@ -10,5 +10,7 @@ samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o
 	gcc 1.4.c -o 1.4.o
 1.5.o : 1.5.c
 	gcc 1.5.c -o 1.5.o
+1.5.a.o : 1.5.a.c
+	gcc 1.5.a.c -o 1.5.a.o
 clean :
-	rm 1.1.o 1.2.o
+	rm 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o
