--- a/C/Makefile
+++ b/C/Makefile
@@ -1,4 +1,4 @@
-samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o
+samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o
 
 1.1.o : 1.1.c
 	gcc 1.1.c -o 1.1.o
@@ -12,5 +12,9 @@ samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o
 	gcc 1.5.c -o 1.5.o
 1.5.a.o : 1.5.a.c
 	gcc 1.5.a.c -o 1.5.a.o
+1.6.o : 1.6.c
+	gcc 1.6.c -o 1.6.o
+1.7.o : 1.7.c
+	gcc 1.7.c -o 1.7.o
 clean :
-	rm 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o
+	rm 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o
