--- a/C/Makefile
+++ b/C/Makefile
@@ -1,4 +1,4 @@
-samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o
+samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o
 
 1.1.o : 1.1.c
 	gcc 1.1.c -o 1.1.o
@@ -16,5 +16,7 @@ samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o
 	gcc 1.6.c -o 1.6.o
 1.7.o : 1.7.c
 	gcc 1.7.c -o 1.7.o
+1.8.o : 1.8.c
+	gcc 1.8.c -o 1.8.o
 clean :
-	rm 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o
+	rm 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o
