--- a/C/Makefile
+++ b/C/Makefile
@@ -1,4 +1,4 @@
-samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o
+samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o 1.12.o
 
 1.1.o : 1.1.c
 	gcc 1.1.c -o 1.1.o
@@ -22,5 +22,7 @@ samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o
 	gcc 1.9.c -o 1.9.o
 1.10.o : 1.10.c
 	gcc 1.10.c -o 1.10.o
+1.12.o : 1.12.c
+	gcc 1.12.c -o 1.12.o
 clean :
-	rm 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o
+	rm 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o 1.12.o
