--- a/C/Makefile
+++ b/C/Makefile
@@ -1,4 +1,4 @@
-samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o 1.12.o 1.13.o 1.14.o 1.15.o 1.17.o 1.18.o
+samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o 1.12.o 1.13.o 1.14.o 1.15.o 1.17.o 1.18.o 1.19.o
 
 1.1.o : 1.1.c
 	gcc 1.1.c -o 1.1.o
@@ -34,5 +34,7 @@ samples: 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o 1.
 	gcc 1.17.c -o 1.17.o
 1.18.o : 1.18.c
 	gcc 1.18.c -o 1.18.o
+1.19.o : 1.19.c
+	gcc 1.19.c -o 1.19.o
 clean :
-	rm 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o 1.12.o 1.13.o 1.14.o 1.15.o 1.17.o 1.18.o
+	rm 1.1.o 1.2.o 1.3.o 1.4.o 1.5.o 1.5.a.o 1.6.o 1.7.o 1.8.o 1.9.o 1.10.o 1.12.o 1.13.o 1.14.o 1.15.o 1.17.o 1.18.o 1.19.o
